--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>ISort</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
